<resources>
    <string name="app_name">SelfieStreak</string>
    <string name="pass_hint">Password...</string>
    <string name="email_hint">Your Email...</string>
    <string name="login_logo_desc">Logo Login Page</string>
    <string name="login_btn_text">Login to account</string>
    <string name="login_reg_btn_text">Need a new Account?</string>
    <string name="action_search_text">Search</string>
    <string name="action_setting_text">Account Settings</string>
    <string name="action_logout_text">Logout</string>
    <string name="reg_btn_text">Create new Account</string>
    <string name="reg_login_text">Already have an Account?</string>
    <string name="reg_pass_text">Password...</string>
    <string name="reg_confirm_pass_text">Confirm Password...</string>
    <string name="setup_name_hint">Your Name...</string>
    <string name="setup_save_btn">Save Account Settings</string>
    <string name="setup_name_hint_text">Your Name ...</string>
    <string name="setup_btn_name_text">Save Account Settings</string>
    <string name="post_desc_hint">Add Description ...</string>
    <string name="new_post_btn_hint">Post Blog</string>
    <string name="bottom_home_text">Home</string>
    <string name="bottom_notification_text">Notification</string>
    <string name="bottom_ac_text">Account</string>
    <string name="facebook_app_id">643428602656678</string>
    <string name="fb_login_protocol_scheme">fb643428602656678</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="todo">todo</string>
    <string name="posttitle">PostTitle</string>
    <string name="post_desc">Post Desc</string>
    <string name="submit_post">Submit Post</string>
    <string name="Import">Home</string>
    <string name="gallery">About Us</string>
    <string name="tools">Events</string>
    <string name="slideshow">My Profile</string>
    <string name="logout">Logout</string>
    <string name="get_started">Get Started</string>
    <string name="green_vibes">GREEN VIBES</string>
    <string name="enter">ENTER</string>
    <string name="explore">EXPLORE</string>
    <string name="todos">TODO</string>
    <string name="leaderboard">Leaderboard</string>

    <string name="_0_likes">0 Likes</string>

    <string name="delete_post">Delete Post</string>


    <string name="edit_profile">EDIT PROFILE</string>
    <string name="Posts">Posts</string>
    <string name="search_here_for_username">Search here for users</string>
    <string name="selfiestreak">#SELFIESTREAK</string>

    <string name="loading_comment">Loading Comment...</string>
    <string name="_00">00</string>
    <string name="days">Days</string>
    <string name="hours">Hours</string>
    <string name="mins">Mins</string>
    <string name="secs">Secs</string>
    <string name="rules">RULES:</string>
    <string name="textview">TextView</string>
    <string name="event_winners">Event Winners</string>
    <string name="likes_0">Likes : 0</string>
    <string name="todotodo">TODO</string>
    <string name="username">Username</string>
    <string name="blog_post_date">Blog Post Date</string>
    <string name="lorem_ipsum_dolor_sit_amet_soluta_regione_urbanitas_vis_in_qui_elit_populo_ut">Lorem ipsum dolor sit amet, soluta regione urbanitas vis in, qui elit populo ut.</string>
    <string name="_0_comments">0 Comments</string>


</resources>
