<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/Import" />
        <item
            android:id="@+id/nav_about"
            android:icon="@mipmap/people"
            android:title="@string/gallery" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_person_black_24dp"
            android:title="@string/slideshow" />
        <item
            android:id="@+id/nav_events"
            android:icon="@drawable/default_image"
            android:title="@string/tools" />
        <item
            android:id="@+id/nav_log_out"
            android:icon="@mipmap/logout"
            android:title="@string/logout" />
    </group>

</menu>